--- a/src/app/components/movie-list/movie-list.component.html
+++ b/src/app/components/movie-list/movie-list.component.html
@@ -15,9 +15,7 @@
         </form>
     </div>
 
-    <button class="fab-add-btn" mat-fab color="primary" aria-label="Add movie button" (click)="onAddMovie()">
-        <mat-icon>add</mat-icon>
-    </button>
+    <mat-checkbox (change)="onShowPostersChange($event)">Posters</mat-checkbox>
 
     <!-- Table -->
     <table mat-table [dataSource]="dataSource" class="example-table"
@@ -41,13 +39,55 @@
             <td mat-cell *matCellDef="let row">{{row.year}}</td>
         </ng-container>
 
+        <!-- Poster Column -->
+        <ng-container matColumnDef="posterUrl">
+            <th mat-header-cell *matHeaderCellDef>Poster</th>
+            <td mat-cell *matCellDef="let row">
+                <img src="{{row.posterUrl}}" width="150" height="222"/>
+            </td>
+        </ng-container>
+
+        <!-- Genres Column -->
+        <ng-container matColumnDef="genres">
+            <th mat-header-cell *matHeaderCellDef>Genres</th>
+            <td mat-cell *matCellDef="let row">{{row.genres}}</td>
+        </ng-container>
+
+        <!-- Director Column -->
+        <ng-container matColumnDef="director">
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>Director</th>
+            <td mat-cell *matCellDef="let row">{{row.director}}</td>
+        </ng-container>
+
+        <!-- Actors Column -->
+        <ng-container matColumnDef="actors">
+            <th mat-header-cell *matHeaderCellDef>Actors</th>
+            <td mat-cell *matCellDef="let row">{{row.actors}}</td>
+        </ng-container>
+
         <!-- Seen Status Column -->
         <ng-container matColumnDef="seenStatus">
             <th mat-header-cell mat-sort-header *matHeaderCellDef>Seen Status</th>
             <td mat-cell *matCellDef="let row">{{row.seenStatus}}</td>
         </ng-container>
 
+        <!-- Plot Column -->
+        <ng-container matColumnDef="plot">
+            <th mat-header-cell *matHeaderCellDef>Plot</th>
+            <td mat-cell *matCellDef="let row">{{row.plot}}</td>
+        </ng-container>
+
+        <!-- Runtime Column -->
+        <ng-container matColumnDef="runtime">
+            <th mat-header-cell mat-sort-header *matHeaderCellDef>Runtime</th>
+            <td mat-cell *matCellDef="let row">{{row.runtime}}</td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <button class="fab-add-btn" mat-fab color="primary" aria-label="Add movie button" (click)="onAddMovie()">
+        <mat-icon>add</mat-icon>
+    </button>
 </div>
